[package]
name = "linux_max6675"
description = "A library that reads temperature data from a MAX6675 over the Linux kernel's SPI API."
authors = ["Barrett Ray <contact@barretts.club>"]
license = "MIT"
repository = "https://github.com/onkoe/linux_max6675"
version = "0.3.0"
edition = "2021"
categories = [
    "os::linux-apis",
    "hardware-support",
    "embedded",
    "science",
    "science::robotics",
]
keywords = ["max6675", "spi"]
readme = "README.md"
exclude = [".github", ".githooks", ".gitignore", "deny.toml", "Cargo.lock"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.17.1"
thiserror = "1.0.50"

[dev-dependencies]
